DNS/DNS01/Pi-Hole/output.yaml
---
# Source: pihole/templates/service-dhcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dhcp
  labels:
    app: pihole
    chart: pihole-2.5.8
    release: pihole
    heritage: Helm
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - port: 67
      targetPort: client-udp
      protocol: UDP
      name: client-udp
  selector:
    app: pihole
    release: pihole
---
# Source: pihole/templates/service-dns-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  labels:
    app: pihole
    chart: pihole-2.5.8
    release: pihole
    heritage: Helm
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - port: 53
      targetPort: dns
      protocol: TCP
      name: dns
  selector:
    app: pihole
    release: pihole
---
# Source: pihole/templates/service-dns-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  labels:
    app: pihole
    chart: pihole-2.5.8
    release: pihole
    heritage: Helm
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - port: 53
      targetPort: dns-udp
      protocol: UDP
      name: dns-udp
  selector:
    app: pihole
    release: pihole
---
# Source: pihole/templates/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  labels:
    app: pihole
    chart: pihole-2.5.8
    release: pihole
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app: pihole
    release: pihole
---
# Source: pihole/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
    chart: pihole-2.5.8
    release: pihole
    heritage: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: pihole
      release: pihole
  template:
    metadata:
      annotations:
        checksum.config.adlists: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
        checksum.config.blacklist: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
        checksum.config.regex: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
        checksum.config.whitelist: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
        checksum.config.dnsmasqConfig: deda9df060fb76f8431093b46fba00fd661658511a2f1e2755d8c43b3179415
        checksum.config.staticDhcpConfig: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
      labels:
        app: pihole
        release: pihole
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 8.8.8.8
      hostname: 
      hostNetwork: false
      containers:
        - name: pihole
          image: "pihole/pihole:2022.02.1"
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          ports:
          - containerPort: 80
            name: http
            protocol: TCP
          - containerPort: 53
            name: dns
            protocol: TCP
          - containerPort: 53
            name: dns-udp
            protocol: UDP
          - containerPort:  443
            name: https
            protocol: TCP
          - containerPort: 67
            name: client-udp
            protocol: UDP
          livenessProbe:
            httpGet:
              path: /admin.index.php
              port: http
            initialDelaySeconds: 60
            failureThreshold: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /admin.index.php
              port: http
            initialDelaySeconds: 60
            failureThreshold: 3
            timeoutSeconds: 5
          volumeMounts:
          - mountPath: /etc/pihole
            name: config
          - mountPath: /etc/dnsmasq.d/02-custom.conf
            name: custom-dnsmasq
            subPath: 02-custom.conf
          - mountPath: /etc/addn-hosts
            name: custom-dnsmasq
            subPath: addn-hosts
          - mountPath: /etc/dnsmasq.d/05-pihole-custom-cname.conf
            name: custom-dnsmasq
            subPath: 05-pihole-custom-cname.conf
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: pihole
      - configMap:
          defaultMode: 420
          name: pihole-custom-dnsmasq
        name: custom-dnsmasq
---
# Source: pihole/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  labels:
    app: pihole
    chart: pihole-2.5.8
    release: pihole
    heritage: Helm
spec:
  rules:
    - host: "chart-example.local"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: pihole-web
                port: 
                  name: http
---
# Source: pihole/templates/tests/test-pihole-endpoint.yml
apiVersion: v1
kind: Pod
metadata:
  name: "pihole-smoke-test"
  annotations:
    "helm.sh/hook": test
spec:
  containers:
  - name: hook1-container
    image: curlimages/curl
    imagePullPolicy: IfNotPresent
    command: ['sh', '-c', 'curl http://pihole-web:80/']
  restartPolicy: Never
  terminationGracePeriodSeconds: 0
